Timeline: fix 'Range'/Pie Chart overlap when timeline details pan is shrunk
BUG=386523

Review URL: https://codereview.chromium.org/362163004

git-svn-id: svn://svn.chromium.org/blink/trunk@177383 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/timelinePanel.css
+++ b/front_end/timelinePanel.css
@@ -760,6 +760,10 @@
     margin: 6px;
 }
 
+.timeline-range-summary > div {
+    flex-shrink: 0;
+}
+
 .timeline-aggregated-info-legend > div {
     overflow: hidden;
     white-space: nowrap;
